--- a/style.css
+++ b/style.css
@@ -8,11 +8,12 @@ table{
 
 input {
     font-size: 35px;
+    border: 2px  green solid; 
 }
 
 button {
-    font-size: 25px;
+    font-size: 40px;
     background: chartreuse;
-    width: 50px;
-    height: 50px;
+    width: 107px;
+    height: 60px
 }
